fixed wrapping

--- a/src/pages/projects/styles/FanQuiz.module.scss
+++ b/src/pages/projects/styles/FanQuiz.module.scss
@@ -52,7 +52,7 @@
         width: 100%;
         height: 100%;
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: column nowrap;
         align-items: flex-start;
         gap: 0.5em;
         box-sizing: border-box;
